--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,15 +1,35 @@
-.main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    background-color: bisque;
+
+.card{
+    background-color:rgb(66, 65, 65);
+    height: auto;
+    width: 21%;
+    margin: 1%;
+    border-radius: 10px;
+    padding: 1%;
+    box-shadow: 2px 2px 2px 2px black;
 
 }
-
+.card-img{
+    height: auto;
+    width: auto;
+}
 .hero-img{
-    height: 30vh;
-    width: 40vw;
+    height: auto;
+    width: 100%;
     border-radius: 5px;
 }
+
+.card-description{
+    background-color: rgb(192, 188, 176);
+    font-family: 'Marvel', sans-serif;
+    border-radius: 5px;
+    height: auto;
+    width: 100%;
+    border: solid 1px;
+}
+
+.card-description>p{
+    text-align: justify;
+    margin: 2%;
+}
+
